--- a/home/bitrix/www/bitrix/components/bitrix/gift.list/templates/.default/style.css
+++ b/home/bitrix/www/bitrix/components/bitrix/gift.list/templates/.default/style.css
@@ -7,22 +7,27 @@
     z-index: 100;
     opacity: 1;
     background: rgba(61, 61, 61, 0.3);
-    
 }
 
 .popup-enter-active,
 .popup-leave-active {
-   transition: opacity 0.3s ease-in-out; 
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .popup-enter-from,
 .popup-leave-to {
-  opacity: 0;
+    opacity: 0;
 }
 
 .banner-container {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -34,7 +39,11 @@
 .banner-popup {
     min-width: 320px;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     width: 746px;
     max-width: 1000px;
@@ -67,10 +76,14 @@
 }
 
 .banner-popup__close-line:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 
 .banner-popup__close-line:nth-child(2) {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
 }
 
@@ -83,6 +96,7 @@
     letter-spacing: 1.5px;
     color: #000;
     background: rgba(255, 255, 255, .6);
+    -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
     padding: 4px 5px 3px 6px;
 }
@@ -90,11 +104,17 @@
 .banner-popup__img img {
     display: block;
     aspect-ratio: 346 / 534;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
 .banner-popup__info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 30px 25px 32px;
 }
@@ -110,7 +130,11 @@
 }
 
 .banner-popup__product {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
     align-items: baseline;
     margin-bottom: 62px;
 }
@@ -128,21 +152,50 @@
 }
 
 .banner-popup__volume {
-    font: 400 16px/19px "Circe", sans-serif; 
+    font: 400 16px/19px "Circe", sans-serif;
     color: #000;
     margin-left: auto;
 }
 
 .banner-popup__payment {
+    display: -ms-grid;
     display: grid;
     gap: 1px 14px;
+    -ms-grid-columns: 1fr 14px 1fr;
     grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto 1px auto;
     grid-template-rows: auto auto;
 }
 
+.banner-popup__payment>*:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+}
+
+.banner-popup__payment>*:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+}
+
+.banner-popup__payment>*:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+}
+
+.banner-popup__payment>*:nth-child(4) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+}
+
 .banner-popup__payment-link {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     min-height: 52px;
     border-radius: 1px;
@@ -151,8 +204,11 @@
     padding: 11px;
     font: 700 14px/15px "Circe", sans-serif;
     text-align: center;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     border: 1px solid transparent;
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
     transition: all .3s linear;
 }
 
@@ -167,10 +223,17 @@
 }
 
 .banner-popup__payment-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: 7px;
+    -ms-grid-column: 2;
     grid-column: 2;
 }
 
@@ -202,11 +265,14 @@
 @media screen and (max-width: 767px) {
     .banner-popup {
         width: 320px;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         border-radius: 0;
     }
 
-    .banner-popup__close { 
+    .banner-popup__close {
         display: none;
     }
 
@@ -215,9 +281,11 @@
     }
 
     .banner-popup__img img {
+        -o-object-fit: cover;
         object-fit: cover;
         aspect-ratio: 320 / 274;
         height: 274px;
+        -o-object-position: top;
         object-position: top;
         width: 100%;
     }
@@ -232,7 +300,7 @@
         line-height: 31px;
         margin-bottom: 8px;
     }
-    
+
     .banner-popup__description {
         font-size: 13px;
         line-height: 16px;
